cambios en los href

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/inicio.css">
+    <link rel="stylesheet" href="../style/inicio.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>COFFEE</title>
@@ -32,13 +32,13 @@
         
          <ul class="aside-ul">
 
-          <a href="/pages/tipos-de-cafe.html" target="_blank" class="aside-enlaces"> <li class="ul-li">Tipos de Cafe</li> </a>
+          <a href="../pages/tipos-de-cafe.html" target="_blank" class="aside-enlaces"> <li class="ul-li">Tipos de Cafe</li> </a>
 
-          <a href="/pages/potres.html" target="_blank" class="aside-enlaces"> <li class="ul-li">Postres</li> </a>
+          <a href="../pages/potres.html" target="_blank" class="aside-enlaces"> <li class="ul-li">Postres</li> </a>
 
-          <a href="/pages/sumate-a-nosotros.html" target="_blank" class="aside-enlaces"> <li class="ul-li">Sumate a Nosotros</li> </a>
+          <a href="../pages/sumate-a-nosotros.html" target="_blank" class="aside-enlaces"> <li class="ul-li">Sumate a Nosotros</li> </a>
 
-          <a href="/pages/sobre-nosotros.html" target="_blank" class="aside-enlaces"> <li class="ul-li"> Sobre Nosotros</li> </a>
+          <a href="../pages/sobre-nosotros.html" target="_blank" class="aside-enlaces"> <li class="ul-li"> Sobre Nosotros</li> </a>
 
         </ul>
 
