--- a/pages/tipos-de-cafe.html
+++ b/pages/tipos-de-cafe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=".../style/tipos-de-cafe.css">
+    <link rel="stylesheet" href="../style/tipos-de-cafe.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Tipos de Cafe</title>
 </head>
@@ -12,7 +12,7 @@
     
 <header>
 
-  <img class="img-fondo" src=".../img/video/img-fondo/tipos-de-cafe.jpg" alt="">
+  <img class="img-fondo" src="./img/video/img-fondo/tipos-de-cafe.jpg" alt="">
  
   <div class="header-div"> </div>
 
