arreglo a los href

--- a/pages/potres.html
+++ b/pages/potres.html
@@ -12,7 +12,7 @@
     
 <header>
 
-  <img class="img-fondo" src="./img/video/img-fondo/postres.jpg" alt="">
+  <img class="img-fondo" src="../img/video/img-fondo/postres.jpg" alt="">
  
   <div class="header-div"> </div>
 
