--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -12,7 +12,7 @@
 
 <body>
     
-<img src="./img/video/img-fondo/sobre nosotros.jpg" alt="">
+<img src="../img/video/img-fondo/sobre nosotros.jpg" alt="">
 
 <div class="text">
 
