--- a/pages/sumate-a-nosotros.html
+++ b/pages/sumate-a-nosotros.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<img src="./img/video/img-fondo/sumate a nosotros.jpg" alt="">
+<img src="../img/video/img-fondo/sumate a nosotros.jpg" alt="">
 
 
 <div class="div"> </div>
