--- a/pages/tipos-de-cafe.html
+++ b/pages/tipos-de-cafe.html
@@ -12,7 +12,7 @@
     
 <header>
 
-  <img class="img-fondo" src="./img/video/img-fondo/tipos-de-cafe.jpg" alt="">
+  <img class="img-fondo" src="../img/video/img-fondo/tipos-de-cafe.jpg" alt="">
  
   <div class="header-div"> </div>
 
