arreglo de los href

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -15,7 +15,7 @@
     
 <header>
 
-   <img class="img-fondo" src="../img/video/inicio.jpg" alt="imagen de cafeteria"> 
+   <img class="img-fondo" src="./img/video/inicio.jpg" alt="imagen de cafeteria"> 
  
    <div class="header-div"> </div>
 
