--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>COFFEE</title>
 </head>
@@ -28,7 +28,7 @@
 
    <p>El cafe ayuda a quien duerme poco y sueña mucho</p>
 
-   <a href="../pages/inicio.html" target="_blank"> Conocenos </a>
+   <a href="./pages/inicio.html" target="_blank"> Conocenos </a>
 
 
 
