arreglo de los href

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,7 +28,7 @@
 
    <p>El cafe ayuda a quien duerme poco y sueña mucho</p>
 
-   <a href="/pages/inicio.html" target="_blank"> Conocenos </a>
+   <a href="inicio.html" target="_blank"> Conocenos </a>
 
 
 
