--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
    <p>El cafe ayuda a quien duerme poco y sueña mucho</p>
 
-   <a target="_blank" href\="./pages/inicio.html" > Conocenos </a>
+   <a  href="./pages/inicio.html" target="_blank" > Conocenos </a>
 
 
 
