arreglo de postres

--- a/pages/potres.html
+++ b/pages/potres.html
@@ -26,7 +26,7 @@
 
     <li class="info-li"> <p>Medialuna con Dulce de Lech.....$110</p></li>
 
-    <li class="info-li"> <p>Medialuna.............................$90</p></li>
+    <li class="info-li"> <p>Medialuna...............$90</p></li>
 
     <li class="info-li"><p>Pastel de Limon.........................$370</p></li>
 
