--- a/pages/sumate-a-nosotros.html
+++ b/pages/sumate-a-nosotros.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="trabajo, trabajos en cafeteria, coffee">
+    <meta name="description" content="¿te gusta el cafe y estas buscando un trabajo? completa el formulario y sumate a COFFEE">
     <link rel="stylesheet" href="../style//css/sumate-a-nosotros.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Sumate a Nosotros</title>
+    <title>COFFEE - Sumate a Nosotros</title>
 </head>
 
 <body>
