--- a/pages/potres.html
+++ b/pages/potres.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="postres, coffee">
+    <meta name="description" content="conocé los distintos tipos de postres">
     <link rel="stylesheet" href="../style/css/postres.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Postres</title>
+    <title>COFFEE - Postres</title>
 </head>
 <body>
     
