--- a/pages/tipos-de-cafe.html
+++ b/pages/tipos-de-cafe.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="tipos de cafe, coffee">
+    <meta name="description" content="conoce la variendad de nuestros cafes">
     <link rel="stylesheet" href="../style/css/tipos-de-cafe.css">
-   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Tipos de Cafe</title>
+    <title>COFFEE - Tipos de Cafe</title>
 </head>
 <body>
     
