cambios en el inicio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Conocé la mejor cafeteria">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>COFFEE</title>
 </head>
@@ -15,12 +16,8 @@
    
 <header>
 
-    <video autoplay loop>
+    <img class="img-fondo" src="./img/video/index.jpg" alt="imagen de fondo">
 
-        <source src="./img/video/cafe1.mp4">
-
-    </video>
-   
     <div class="div"> </div>
 
 
