arreglos en inicio

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -8,6 +8,7 @@
     <meta name="description" content="conocé las posibilidades que te brinda COFFEE">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style/css/inicio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link href='https://css.gg/arrow-bottom-left.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -57,14 +58,20 @@
 </div>
 
 
-
-
-
-
 </div>
 
 
+<section class="footer">
 
+    <div class="share">
+        <a href="https://es-la.facebook.com/" class="fab fa-facebook-f"></a>
+        <a href="https://twitter.com/?lang=es" class="fab fa-twitter"></a>
+        <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
+        <a href="https://ar.pinterest.com/" class="fab fa-pinterest"></a>
+    </div>
+
+
+</section>
 
 
 
