--- a/pages/tipos-de-cafe.html
+++ b/pages/tipos-de-cafe.html
@@ -7,38 +7,33 @@
     <meta name="keywords" content="tipos de cafe, coffee">
     <meta name="description" content="conoce la variendad de nuestros cafes">
     <link rel="stylesheet" href="../style/css/tipos-de-cafe.css">
+    <link href='https://css.gg/arrow-bottom-left.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>COFFEE - Tipos de Cafe</title>
 </head>
 <body>
     
 <header>
 
-  <img class="img-fondo" src="../img/video/img-fondo/tipos-de-cafe.jpg" alt="">
- 
-  <div class="header-div"> </div>
+  <h1><a href="../pages/inicio.html">coffee</a></h1>
 
-   <div class="info">
+  <div class="nav-menu">
 
-   <h1 class="info-h1">COFFEE</h1>
+   <input type="checkbox" id="check">
 
-   <ul class="info-ul">
+   <label for="check" class="checkbtn">
 
-    <li class="info-li"> <p>Cafe con Leche...............$280</p></li>
+   <i class="gg-arrow-bottom-left"></i>
 
-    <li class="info-li"> <p>Americano.......................$310</p></li>
+   </label> 
 
-    <li class="info-li"> <p>Cappuccino......................$340</p></li>
+   <ul>
 
-    <li class="info-li"><p>Expresso Lungo...............$260</p></li>
-
-    <li class="info-li"><p>Macchiato.........................$390</p></li>
-
-    <li class="info-li"><p>Flat...................................$350</p></li>
-
-    <li class="info-li"><p>Submarino........................$330</p></li>
-   
-    <li class="info-li"><p>Lagrima............................$290</p></li>
+    <li><a href="../pages/tipos-de-cafe.html">tipos de cafe</a></li>
+    <li><a href="../pages/potres.html">postres</a></li>
+    <li><a href="../pages/sobre-nosotros.html">sobre nosotros</a></li>
+    <li><a href="../pages/sumate-a-nosotros.html">sumate a nosotros</a></li>
 
    </ul>
 
@@ -46,6 +41,37 @@
   </div>
 
 </header>
+
+
+<div class="contenedor">
+
+
+
+
+
+
+
+
+  
+</div>
+
+
+
+
+
+
+<section class="footer">
+
+    <div class="share">
+        <a href="https://es-la.facebook.com/" class="fab fa-facebook-f"></a>
+        <a href="https://twitter.com/?lang=es" class="fab fa-twitter"></a>
+        <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
+        <a href="https://ar.pinterest.com/" class="fab fa-pinterest"></a>
+    </div>
+
+
+</section>
+
 
 
 </body>
