cambios en la pagina

--- a/pages/sumate-a-nosotros.html
+++ b/pages/sumate-a-nosotros.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="../style//css/sumate-a-nosotros.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>COFFEE - Sumate a Nosotros</title>
 </head>
 
 <body>
 
-<img src="../img/video/img-fondo/sumate a nosotros.jpg" alt="">
+<img src="../img/video/sumate-a-nosotros.jpg" alt="">
 
 
 <div class="div"> </div>
@@ -78,6 +79,8 @@
 
 
 </div>    
+
+
 
 
 </body>
