--- a/pages/potres.html
+++ b/pages/potres.html
@@ -14,7 +14,7 @@
     
 <header>
 
-  <img class="img-fondo" src="../img/video/img-fondo/postres.jpg" alt="">
+  <img class="img-fondo" src="../img/video/postres.jpg" alt="">
  
   <div class="header-div"> </div>
 
