--- a/pages/tipos-de-cafe.html
+++ b/pages/tipos-de-cafe.html
@@ -13,27 +13,34 @@
     <title>COFFEE - Tipos de Cafe</title>
 </head>
 <body>
-    
+        
 <header>
 
-  <h1><a href="../pages/inicio.html">coffee</a></h1>
+  <img class="img-fondo" src="../img/video/tipos-de-cafe.jpg" alt="">
+ 
+  <div class="header-div"> </div>
 
-  <div class="nav-menu">
+   <div class="info">
 
-   <input type="checkbox" id="check">
+   <h1 class="info-h1">COFFEE</h1>
 
-   <label for="check" class="checkbtn">
+   <ul class="info-ul">
 
-   <i class="gg-arrow-bottom-left"></i>
+    <li class="info-li"> <p>Cafe con Leche...............$280</p></li>
 
-   </label> 
+    <li class="info-li"> <p>Americano.......................$310</p></li>
 
-   <ul>
+    <li class="info-li"> <p>Cappuccino......................$340</p></li>
 
-    <li><a href="../pages/tipos-de-cafe.html">tipos de cafe</a></li>
-    <li><a href="../pages/potres.html">postres</a></li>
-    <li><a href="../pages/sobre-nosotros.html">sobre nosotros</a></li>
-    <li><a href="../pages/sumate-a-nosotros.html">sumate a nosotros</a></li>
+    <li class="info-li"><p>Expresso Lungo...............$260</p></li>
+
+    <li class="info-li"><p>Macchiato.........................$390</p></li>
+
+    <li class="info-li"><p>Flat...................................$350</p></li>
+
+    <li class="info-li"><p>Submarino........................$330</p></li>
+   
+    <li class="info-li"><p>Lagrima............................$290</p></li>
 
    </ul>
 
@@ -41,36 +48,6 @@
   </div>
 
 </header>
-
-
-<div class="contenedor">
-
-
-
-
-
-
-
-
-  
-</div>
-
-
-
-
-
-
-<section class="footer">
-
-    <div class="share">
-        <a href="https://es-la.facebook.com/" class="fab fa-facebook-f"></a>
-        <a href="https://twitter.com/?lang=es" class="fab fa-twitter"></a>
-        <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
-        <a href="https://ar.pinterest.com/" class="fab fa-pinterest"></a>
-    </div>
-
-
-</section>
 
 
 
