--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -64,10 +64,10 @@
 <section class="footer">
 
     <div class="share">
-        <a href="https://es-la.facebook.com/" class="fab fa-facebook-f"></a>
-        <a href="https://twitter.com/?lang=es" class="fab fa-twitter"></a>
-        <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
-        <a href="https://ar.pinterest.com/" class="fab fa-pinterest"></a>
+        <a href="*" class="fab fa-facebook-f"></a>
+        <a href="*" class="fab fa-twitter"></a>
+        <a href="*" class="fab fa-instagram"></a>
+        <a href="*" class="fab fa-pinterest"></a>
     </div>
 
 
