--- a/pages/sumate-a-nosotros.html
+++ b/pages/sumate-a-nosotros.html
@@ -36,9 +36,9 @@
 
    <footer>
 
-    <a href="https://www.instagram.com/" target="_blank" class="footer-enlaces"><i class='bx bxl-instagram'></i></a>
+    <a href="*" target="_blank" class="footer-enlaces"><i class='bx bxl-instagram'></i></a>
 
-    <a href="https://es-la.facebook.com/" target="_blank" class="footer-enlaces"><i class='bx bxl-facebook'></i></a>
+    <a href="*" target="_blank" class="footer-enlaces"><i class='bx bxl-facebook'></i></a>
 
 
    </footer>
