cambios en el inicio

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -47,18 +47,28 @@
 
 </header>
 
-<div class="contenedor">
+<section class="main">
 
-<img src="../img/video/inicio.jpeg" alt="">
+  <div class="div-p">
 
-<div class="info">
+    <p>Con <span>COFFEE</span> vas a poder disfrutar de un buen cafe y un buen ambiente al mejor precio</p>
 
-<p class="info-p">Con COFFEE vas a poder disfrutar de un buen cafe y un buen ambiente al mejor precio</p>
-
-</div>
+  </div>
 
 
-</div>
+  <div class="div-img">
+
+    <img src="../img/video/undraw_coffee_re_x35h (1).svg" alt="">
+
+  </div>
+
+
+</section>
+
+
+
+
+
 
 
 <section class="footer">
