arreglos en el footer

--- a/pages/tipos-de-cafe.html
+++ b/pages/tipos-de-cafe.html
@@ -14,33 +14,27 @@
 </head>
 <body>
         
+
 <header>
 
-  <img class="img-fondo" src="../img/video/tipos-de-cafe.jpg" alt="">
- 
-  <div class="header-div"> </div>
+  <h1>COFFEE</h1>
 
-   <div class="info">
+  <div class="nav-menu">
 
-   <h1 class="info-h1">COFFEE</h1>
+   <input type="checkbox" id="check">
 
-   <ul class="info-ul">
+   <label for="check" class="checkbtn">
 
-    <li class="info-li"> <p>Cafe con Leche...............$280</p></li>
+   <i class="gg-arrow-bottom-left"></i>
 
-    <li class="info-li"> <p>Americano.......................$310</p></li>
+   </label> 
 
-    <li class="info-li"> <p>Cappuccino......................$340</p></li>
+   <ul>
 
-    <li class="info-li"><p>Expresso Lungo...............$260</p></li>
-
-    <li class="info-li"><p>Macchiato.........................$390</p></li>
-
-    <li class="info-li"><p>Flat...................................$350</p></li>
-
-    <li class="info-li"><p>Submarino........................$330</p></li>
-   
-    <li class="info-li"><p>Lagrima............................$290</p></li>
+    <li><a href="../pages/tipos-de-cafe.html">tipos de cafe</a></li>
+    <li><a href="../pages/potres.html">postres</a></li>
+    <li><a href="../pages/sobre-nosotros.html">sobre nosotros</a></li>
+    <li><a href="../pages/sumate-a-nosotros.html">sumate a nosotros</a></li>
 
    </ul>
 
@@ -48,6 +42,27 @@
   </div>
 
 </header>
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
