--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../style/css/inicio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <link href='https://css.gg/arrow-bottom-left.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <title>COFFEE - inicio</title>
@@ -72,13 +72,11 @@
 
 
 <section class="footer">
-
-    <div class="share">
-        <a href="*" class="fab fa-facebook-f"></a>
-        <a href="*" class="fab fa-twitter"></a>
-        <a href="*" class="fab fa-instagram"></a>
-        <a href="*" class="fab fa-pinterest"></a>
-    </div>
+  <ul>
+    <li><a href="*"><i class='bx bxl-instagram'> </i></a> </li>
+    <li><a href="*"><i class='bx bxl-twitter' ></i></a></i></li>
+    <li><a href="*"><i class='bx bxl-pinterest' ></i></a></i></li>
+  </ul>
 
 
 </section>
