arreglos en sobre nosotros

--- a/pages/tipos-de-cafe.html
+++ b/pages/tipos-de-cafe.html
@@ -43,7 +43,22 @@
 
 </header>
 
+<section>
 
+<div class="contenedor-box">
+
+<div>
+  <div><h2>Cafe con Leche</h2></div>
+  
+</div>
+
+
+</div>
+
+
+
+
+</section>
  
 
 
