arreglos finales a las paginas

--- a/pages/tipos-de-cafe.html
+++ b/pages/tipos-de-cafe.html
@@ -10,15 +10,15 @@
     <link href='https://css.gg/arrow-bottom-left.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <title>COFFEE - Tipos de Cafe</title>
 </head>
 <body>
         
 
 <header>
- 
-<nav class="navbar bg-light fixed-top" style="background-color:#fefbfb ;">
+  <nav class="navbar bg-light fixed-top" style="background-color:#fefbfb ;">
   <div class="container-fluid">
     <h1>COFFEE</h1>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" style="color:#4c4b34 ;background-color: #bfb192;">
@@ -62,26 +62,41 @@
 
 </header>
 
-<section>
+<div class="info">
 
-<div class="contenedor-box">
+  <h2 class="info-h2">MENU</h2>
 
-<div>
-  <div><h2>Cafe con Leche</h2></div>
-  
+  <ul class="info-ul">
+    
+  <li class="info-li"><p>Cafe con Leche...............$280</p></li>
+
+  <li class="info-li"><p>Americano.......................$310</p></li>
+
+  <li class="info-li"><p>Cappuccino......................$340</p></li>
+
+  <li class="info-li"><p>Expresso Lungo...............$260</p></li>
+
+  <li class="info-li"><p>Macchiato.........................$390</p></li>
+
+  <li class="info-li"><p>Flat...................................$350</p></li>
+
+  <li class="info-li"><p>Submarino........................$330</p></li>
+
+
+  </ul>
+
 </div>
 
-
-</div>
-
-
+<section class="footer">
+  <ul>
+    <li><a href="*"><i class='bx bxl-instagram'> </i></a> </li>
+    <li><a href="*"><i class='bx bxl-twitter' ></i></a></i></li>
+    <li><a href="*"><i class='bx bxl-pinterest' ></i></a></i></li>
+  </ul>
 
 
 </section>
- 
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-
 
 
 </body>
