arreglos finales a las paginas

--- a/pages/potres.html
+++ b/pages/potres.html
@@ -66,17 +66,17 @@
 
    <ul class="info-ul">
     
-    <li class="info-li"><p>Brownie.............$480</p></li>
+    <li class="info-li"><p>Brownie.................................$480</p></li>
 
-    <li class="info-li"> <p>Medialuna...............$90</p></li>
+    <li class="info-li"> <p>Medialuna...............................$90</p></li>
 
-    <li class="info-li"><p>Pastel de Limon........$370</p></li>
+    <li class="info-li"><p>Pastel de Limon.....................$370</p></li>
 
-    <li class="info-li"><p>Waffles Dulces..............$670</p></li>
+    <li class="info-li"><p>Waffles Dulces.......................$670</p></li>
 
-    <li class="info-li"><p>Waffles Salados................$640</p></li>
+    <li class="info-li"><p>Waffles Salados.....................$640</p></li>
 
-    <li class="info-li"> <p>Medialuna con Dulce........$110</p></li>
+    <li class="info-li"> <p>Medialuna con Dulce.............$110</p></li>
 
     <li class="info-li"> <p>Medialuna con JYQ................$130</p></li>
 
